[gd_scene load_steps=16 format=3 uid="uid://dsg1p33dye2xt"]

[ext_resource type="Script" path="res://scripts/progress_screen.gd" id="1_ioxp5"]
[ext_resource type="Texture2D" uid="uid://b6om211skohg8" path="res://sprites/progress_screen.png" id="2_iuex6"]
[ext_resource type="Texture2D" uid="uid://d34dnf1l37j3x" path="res://sprites/progress_screen_next_button_bigger.png" id="3_k7rui"]
[ext_resource type="Material" uid="uid://dpbfuop2b0r8j" path="res://carved_wood.tres" id="4_8uko7"]
[ext_resource type="FontFile" uid="uid://cit1npgi7fd48" path="res://ff-comma-trial/FFCommaTrial-Regular.ttf" id="5_knw4w"]
[ext_resource type="Texture2D" uid="uid://cn6ja5k82jsc" path="res://sprites/gems/medium_ruby.png" id="6_18e8i"]
[ext_resource type="Texture2D" uid="uid://8g7ulp4awkgd" path="res://sprites/coin.png" id="7_0s376"]
[ext_resource type="Texture2D" uid="uid://dygy5hebhsd2t" path="res://sprites/gems/medium_emerald.png" id="8_khvf2"]
[ext_resource type="Texture2D" uid="uid://xc4ap77kq8t3" path="res://sprites/gems/small_ruby.png" id="9_rd7fs"]
[ext_resource type="Texture2D" uid="uid://och8p5ilv7o4" path="res://sprites/gems/small_emerald.png" id="10_413l3"]
[ext_resource type="Texture2D" uid="uid://cljn5dnkhvxbj" path="res://sprites/gems/medium_sapphire.png" id="11_5idhi"]
[ext_resource type="Texture2D" uid="uid://dc7et5bel0rqa" path="res://sprites/gems/big_topaz.png" id="12_kipvv"]
[ext_resource type="Texture2D" uid="uid://dt6e6shvgk337" path="res://sprites/gems/big_sapphire.png" id="13_ejafj"]
[ext_resource type="PackedScene" uid="uid://c1ltxtwfc7hjp" path="res://scenes/jokers.tscn" id="14_28c67"]

[sub_resource type="LabelSettings" id="LabelSettings_ts7m7"]
font = ExtResource("5_knw4w")
font_size = 30

[node name="ProgressScreen" type="Node2D"]
script = ExtResource("1_ioxp5")

[node name="home_screen" type="Button" parent="."]
visible = false
offset_left = 575.0
offset_top = 318.0
offset_right = 641.0
offset_bottom = 360.0
focus_mode = 0
flat = true

[node name="next" type="Button" parent="."]
visible = false
offset_left = 574.0
offset_top = 316.0
offset_right = 640.0
offset_bottom = 359.0
focus_mode = 0
flat = true

[node name="ProgressScreen" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("2_iuex6")

[node name="ProgressScreenNextButtonBigger" type="Sprite2D" parent="."]
visible = false
position = Vector2(320, 180)
texture = ExtResource("3_k7rui")

[node name="X_labels" type="Node2D" parent="."]

[node name="Label1" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 49.0
offset_top = 88.0
offset_right = 73.0
offset_bottom = 119.0
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label2" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 145.0
offset_top = 89.0
offset_right = 169.0
offset_bottom = 120.0
rotation = 2.61799
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label3" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 174.0
offset_top = 153.0
offset_right = 198.0
offset_bottom = 184.0
rotation = 2.35619
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label4" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 70.0
offset_top = 162.0
offset_right = 94.0
offset_bottom = 193.0
rotation = 0.261799
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label5" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 108.0
offset_top = 232.0
offset_right = 132.0
offset_bottom = 263.0
rotation = 0.785398
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label6" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 207.0
offset_top = 282.0
offset_right = 231.0
offset_bottom = 313.0
rotation = 0.523599
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label7" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 176.0
offset_top = 229.0
offset_right = 200.0
offset_bottom = 260.0
rotation = -1.5708
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label8" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 204.0
offset_top = 93.0
offset_right = 228.0
offset_bottom = 124.0
rotation = 0.785398
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label9" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 250.0
offset_top = 135.0
offset_right = 274.0
offset_bottom = 166.0
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label10" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 286.0
offset_top = 217.0
offset_right = 310.0
offset_bottom = 248.0
rotation = 1.8326
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label11" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 303.0
offset_top = 106.0
offset_right = 327.0
offset_bottom = 137.0
rotation = -0.523599
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label12" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 382.0
offset_top = 93.0
offset_right = 406.0
offset_bottom = 124.0
rotation = -0.785398
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label13" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 367.0
offset_top = 180.0
offset_right = 391.0
offset_bottom = 211.0
rotation = 1.8326
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label14" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 421.0
offset_top = 229.0
offset_right = 445.0
offset_bottom = 260.0
rotation = -0.261799
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label15" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 356.0
offset_top = 275.0
offset_right = 380.0
offset_bottom = 306.0
rotation = 1.8326
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label16" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 498.0
offset_top = 310.0
offset_right = 522.0
offset_bottom = 341.0
rotation = 3.14159
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label17" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 454.0
offset_top = 153.0
offset_right = 478.0
offset_bottom = 184.0
rotation = 1.8326
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label18" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 566.0
offset_top = 200.0
offset_right = 590.0
offset_bottom = 231.0
rotation = 0.261799
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label19" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 505.0
offset_top = 81.0
offset_right = 529.0
offset_bottom = 112.0
rotation = 1.8326
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label20" type="Label" parent="X_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 563.0
offset_top = 87.0
offset_right = 589.0
offset_bottom = 118.0
rotation = -0.523599
text = "X"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="O_labels" type="Node2D" parent="."]

[node name="Label1" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 49.0
offset_top = 85.0
offset_right = 73.0
offset_bottom = 116.0
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label2" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 146.0
offset_top = 92.0
offset_right = 170.0
offset_bottom = 123.0
rotation = 2.61799
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label3" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 175.0
offset_top = 154.0
offset_right = 199.0
offset_bottom = 185.0
rotation = 2.35619
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label4" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 72.0
offset_top = 159.0
offset_right = 96.0
offset_bottom = 190.0
rotation = 0.261799
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label5" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 111.0
offset_top = 230.0
offset_right = 135.0
offset_bottom = 261.0
rotation = 0.785398
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label6" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 209.0
offset_top = 277.0
offset_right = 233.0
offset_bottom = 308.0
rotation = 0.523599
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label7" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 173.0
offset_top = 228.0
offset_right = 197.0
offset_bottom = 259.0
rotation = -1.5708
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label8" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 207.0
offset_top = 93.0
offset_right = 231.0
offset_bottom = 124.0
rotation = 0.785398
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label9" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 251.0
offset_top = 132.0
offset_right = 275.0
offset_bottom = 163.0
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label10" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 289.0
offset_top = 218.0
offset_right = 313.0
offset_bottom = 249.0
rotation = 1.8326
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label11" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 302.0
offset_top = 103.0
offset_right = 326.0
offset_bottom = 134.0
rotation = -0.523599
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label12" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 382.0
offset_top = 91.0
offset_right = 406.0
offset_bottom = 122.0
rotation = -0.785398
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label13" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 370.0
offset_top = 181.0
offset_right = 394.0
offset_bottom = 212.0
rotation = 1.8326
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label14" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 420.0
offset_top = 226.0
offset_right = 444.0
offset_bottom = 257.0
rotation = -0.261799
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label15" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 359.0
offset_top = 276.0
offset_right = 383.0
offset_bottom = 307.0
rotation = 1.8326
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label16" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 498.0
offset_top = 312.0
offset_right = 522.0
offset_bottom = 343.0
rotation = 3.14159
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label17" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 456.0
offset_top = 154.0
offset_right = 480.0
offset_bottom = 185.0
rotation = 1.8326
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label18" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 566.0
offset_top = 197.0
offset_right = 590.0
offset_bottom = 228.0
rotation = 0.261799
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label19" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 508.0
offset_top = 83.0
offset_right = 532.0
offset_bottom = 114.0
rotation = 1.8326
text = "o"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="Label20" type="Label" parent="O_labels"]
visible = false
material = ExtResource("4_8uko7")
offset_left = 595.0
offset_top = 86.0
offset_right = 619.0
offset_bottom = 117.0
rotation = 1.8326
text = "O"
label_settings = SubResource("LabelSettings_ts7m7")

[node name="soundfx_player" type="AudioStreamPlayer2D" parent="."]

[node name="coins_and_gems" type="Node2D" parent="."]

[node name="MediumRuby" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(130, 64)
texture = ExtResource("6_18e8i")

[node name="Coin" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(49, 213)
texture = ExtResource("7_0s376")

[node name="MediumEmerald" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(162, 294)
texture = ExtResource("8_khvf2")

[node name="Coin2" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(270, 56)
texture = ExtResource("7_0s376")

[node name="Coin3" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(70, 71)
texture = ExtResource("7_0s376")

[node name="SmallRuby" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(420, 90)
texture = ExtResource("9_rd7fs")

[node name="Coin4" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(253, 268)
texture = ExtResource("7_0s376")

[node name="Coin5" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(341, 128)
texture = ExtResource("7_0s376")

[node name="SmallEmerald" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(255, 139)
texture = ExtResource("10_413l3")

[node name="Coin6" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(455, 132)
texture = ExtResource("7_0s376")

[node name="MediumSapphire" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(311, 238)
texture = ExtResource("11_5idhi")

[node name="Coin7" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(525, 285)
texture = ExtResource("7_0s376")

[node name="Coin8" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(371, 306)
texture = ExtResource("7_0s376")

[node name="BigTopaz" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(559, 209)
texture = ExtResource("12_kipvv")

[node name="Coin9" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(376, 37)
texture = ExtResource("7_0s376")

[node name="Coin10" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(587, 41)
texture = ExtResource("7_0s376")

[node name="BigSapphire" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(515, 105)
texture = ExtResource("13_ejafj")

[node name="Coin11" type="Sprite2D" parent="coins_and_gems"]
visible = false
position = Vector2(171, 111)
texture = ExtResource("7_0s376")

[node name="Jokers" parent="." instance=ExtResource("14_28c67")]
visible = false

[connection signal="mouse_entered" from="home_screen" to="." method="_on_home_screen_mouse_entered"]
[connection signal="mouse_exited" from="home_screen" to="." method="_on_home_screen_mouse_exited"]
[connection signal="pressed" from="home_screen" to="." method="_on_home_screen_pressed"]
[connection signal="mouse_entered" from="next" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="next" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="next" to="." method="_on_button_pressed"]
